gap support issue fixed with margin

--- a/style/about.css
+++ b/style/about.css
@@ -6,7 +6,9 @@
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-    gap: 5rem;
+}
+.club-item + .club-item{
+    margin-top: 5rem;
 }
 .club-item{
     max-width: 350px;
@@ -33,6 +35,10 @@
         flex-direction: row;
         align-items: stretch;
         justify-content: center;
+    }
+    .club-item + .club-item{
+        margin-top: 0;
+        margin-left: 5rem;
     }
 }
 
